# cosmos

cosmos-core/: CMakeLists.txt  main.cpp
cosmos-core/bodies/: Body.h
cosmos-core/engine/: Session.h  Storage.cpp  Storage.h
cosmos-core/geometry/: Point.cpp  Point.h
cosmos-core/utils/: Math.cpp  Math.h
